prevent horizontal scrollbars

--- a/src/main/client/src/index.css
+++ b/src/main/client/src/index.css
@@ -5,6 +5,7 @@
 @layer base {
   html {
     @apply h-full;
+    @apply overflow-x-hidden;
   }
   body {
     @apply bg-stone-800;
